--- a/_data/standards/ngss.yml
+++ b/_data/standards/ngss.yml
@@ -1,8 +1,13 @@
 org: NGSS
 url: https://www.nextgenscience.org/pe/
 data:
+  - code: K-LS1-1
+    title: "From Molecules to Organisms: Structures and Processes"
+    slug: molecules-organisms-structures-and-processes
+    description: Use observations to describe patterns of what plants and animals (including humans) need to survive.
   - code: 4-LS1-1
-    title: "Molecules Organisms: Structures and Processes"
+    title: "From Molecules to Organisms: Structures and Processes"
+    slug: molecules-organisms-structures-and-processes
     description: Construct an argument that plants and animals have internal and external structures that function to support survival, growth, behavior, and reproduction.
   - code: 2-LS4-1
     title: "Biological Evolution: Unity and Diversity"
@@ -13,6 +18,9 @@ data:
   - code: 3-LS4-4
     title: "Biological Evolution: Unity and Diversity"
     description: Make a claim about the merit of a solution to a problem caused when the environment changes and the types of plants and animals that live there may change.
+  - code: 2-PS1-1
+    title: Matter and Its Interactions
+    description: Plan and conduct an investigation to describe and classify different kinds of materials by their observable properties.
   - code: 5-PS1-3
     title: Matter and Its Interactions
     description: Make observations and measurements to identify materials based on their properties.
@@ -30,13 +38,9 @@ data:
     description: Generate and compare multiple possible solutions to a problem based on how well each is likely to meet the criteria and constraints of the problem.
   - code: 4-ESS2-1
     title: Earth's Systems
+    slug: earths-systems
     description: Make observations and/or measurements to provide evidence of the effects of weathering or the rate of erosion by water, ice, wind, or vegetation.
   - code: 5-ESS2-1
     title: Earth's Systems
+    slug: earths-systems
     description: Develop a model using an example to describe ways the geosphere, biosphere, hydrosphere, and/or atmosphere interact.
-  - code: K-LS1-1
-    title: "Molecules Organisms: Structures and Processes"
-    description: Use observations to describe patterns of what plants and animals (including humans) need to survive.
-  - code: 2-PS1-1
-    title: Matter and Its Interactions
-    description: Plan and conduct an investigation to describe and classify different kinds of materials by their observable properties.
