--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,10 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+algolia:
+  application_id: Z1MM044EZ8
+  index_name: oer
+  search_only_api_key: cad8ec927860485f3a8ac1ce2372be28
+  nodes_to_index: 'p,table,h1'
+  files_to_exclude:
+    - index.md
