--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,6 @@ title: FarmBot Open Educational Resources
 url: https://oer.farm.bot
 description: Openly licensed and free to use educational resources for teaching FarmBot technology and related subjects
 logo: /assets/images/documentation.png
-theme: jekyll-theme-cayman
 remote_theme: FarmBot-Docs/farmbot-theme@main
 repository: FarmBot-Docs/farmbot-oer
 baseurl: /
@@ -12,6 +11,7 @@ plugins:
   - jemoji
   - jekyll-redirect-from
   - jekyll-remote-theme
+  - jekyll-seo-tag
 include:
   - _images
   - _redirects
