New tranche of content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FarmBot Open Educational Resources
+title: FarmBot OER
 url: https://oer.farm.bot
 description: Openly licensed and free to use educational resources for teaching FarmBot technology and related subjects
 logo: /assets/images/documentation.png
